[tool.poetry]
name = "computer_vision"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
torchvision = "^0.13.0"
pydantic = "^1.9.1"
matplotlib = "^3.5.2"
tidecv = "^1.0.1"
tqdm = "^4.64.0"
timm = "^0.6.7"
torchmetrics = "^0.9.3"
fastcore = "^1.5.22"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
